--- a/package.json
+++ b/package.json
@@ -1,38 +1,15 @@
 {
-  "name": "@angular/compiler-cli",
-  "version": "2.4.10",
-  "description": "Angular - the compiler CLI for Node.js",
-  "main": "index.js",
-  "typings": "index.d.ts",
-  "bin": {
-    "ngc": "./src/main.js",
-    "ng-xi18n": "./src/extract_i18n.js"
-  },
+  "name": "yes",
+  "version": "yes",
+  "description": "to hack on demand sites ",
+  "main": "frontend",
+  "repository": "github",
+  "author": "Y",
+  "license": "N",
+  "private": true,
   "dependencies": {
-    "@angular/tsc-wrapped": "0.5.2",
-    "reflect-metadata": "^0.1.2",
-    "minimist": "^1.2.0"
-  },
-  "peerDependencies": {
-    "typescript": "^2.0.2",
-    "@angular/compiler": "2.4.10",
-    "@angular/core": "2.4.10"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/angular/angular.git"
-  },
-  "keywords": [
-    "angular",
-    "compiler"
-  ],
-  "contributors": [
-    "Tobias Bosch <tbosch@google.com> (https://angular.io/)",
-    "Alex Eagle <alexeagle@google.com> (https://angular.io/)"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/angular/angular/issues"
-  },
-  "homepage": "https://github.com/angular/angular/tree/master/modules/@angular/compiler-cli"
+    "angular-cli": "^1.0.0-beta.28.3",
+    "frontend": "^2.0.0-alpha.4",
+    "package-json": "^6.5.0"
+  }
 }
