--- a/package.json
+++ b/package.json
@@ -1,15 +1,58 @@
 {
-  "name": "yes",
-  "version": "yes",
-  "description": "to hack on demand sites ",
-  "main": "frontend",
-  "repository": "github",
-  "author": "Y",
-  "license": "N",
+  "name": "y",
+  "version": "y",
+  "license": "yes",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
   "private": true,
   "dependencies": {
-    "angular-cli": "^1.0.0-beta.28.3",
-    "frontend": "^2.0.0-alpha.4",
-    "package-json": "^6.5.0"
-  }
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
+    "@angular/cli": "^8.3.20",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/flex-layout": "^5.0.0-beta.14",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.4",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "ng": "0.0.0",
+    "rxjs": "^5.5.6",
+    "serve": "^11.2.0",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v16.4.0",
+    "zone.js": "^0.8.19"
+  },
+  "devDependencies": {
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3"
+  },
+  "description": "frontend of hackbot",
+  "main": "index.js",
+  "author": "Mr. Mesmerizer"
 }
